# fair-event-seat-distribution

./: Cargo.toml
src/: main.rs
src/backend/: auth.rs  data.rs  mod.rs  state.rs
src/gui/: admin.rs  login.rs  mod.rs  user.rs
static/css/: app.css
templates/: index.html.hbs  login.html.hbs
templates/admin/: event.html.hbs  index.html.hbs
templates/user/: event.html.hbs
